--- a/student.css
+++ b/student.css
@@ -84,6 +84,7 @@ nav{
     box-shadow: black 10px 10px 20px;
     border-top-right-radius:200px;
     border-bottom-left-radius:200px;
+    position:relative;
 }
 dt,.heading{
     color:tomato;
@@ -115,7 +116,7 @@ input,textarea,select{
     text-align: center;
     display: block;
 }
-#message,#message1{
+#message1,#message2{
     display: none;
     font-weight: bold;
     border:black solid;
@@ -179,4 +180,107 @@ input,textarea,select{
     right:10px;
     max-width: 23%;
     min-width: 22%;
+}
+.label{
+    display:block;
+    position:relative;
+    cursor:pointer;
+    color:#006600;
+    font-size:1.5em;
+    font-weight:bold;
+    margin-left: 15%;
+}
+.label input{
+    position:absolute;
+    opacity:0;
+    cursor:pointer;
+}
+.checkmark{
+    height:20px;
+    width: 20px;
+    border-radius:5px;
+    position:absolute;
+    left:200px;
+    background-color: white;
+    border:solid black;
+}
+.label:hover .checkmark{
+    background-color: #ffff66;
+}
+.label input:checked ~ .checkmark {
+    background-color: Tomato;
+}
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+.label input:checked ~ .checkmark:after {
+    display: block;
+}
+.label .checkmark:after {
+    left: 5px;
+    top: 0px;
+    width: 8px;
+    height: 13px;
+    border: solid white;
+    border-radius:10px;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+.hobby{
+    position:absolute;
+    max-height:60vh;
+    max-width:60vw;
+    float:right;
+    right:80px;
+    bottom:5px;
+    border-radius:10px;
+    z-index:-1000;
+    opacity:0.5;
+}
+.hobby_image{
+    display:block;
+    position:absolute;
+    max-height:30vh;
+    max-width:30vw;
+    float:right;
+    right:10px;
+    bottom:30px;
+    border-radius:10px;
+    border-top-right-radius:30%;
+    border-bottom-left-radius:30%;
+    z-index:-999;
+    animation-name: move;
+    animation-iteration-count: infinite; 
+    animation-timing-function: ease;
+    animation-direction:alternate;
+}
+@keyframes move{
+ from{transform:translate(0px,0px);}
+ to{transform:translate(-730px,0px);}
+}
+.painting{
+    animation-duration:0.75s;
+}
+.gaming{
+    animation-duration:1s;
+}
+.guitar{
+    animation-duration:2s;
+}
+.singing{
+    animation-duration:3s;
+}
+.dancing{
+    animation-duration:3.7s; 
+}
+.hobbies{
+    animation-duration:4s;
+    opacity:1;
+}
+.after ,.label{
+    display:none;
 }
